data/derived/comb/progs/unify/prog0963.ml.out
Characters 237-241:
  let (_, res) = List.fold_left f base args in
                                  ^^^^
Error: This expression has type int * int
       but an expression was expected of type int * int list
       Type int is not compatible with type int list 
